BTATOW Remove custom fonts and font files.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
@@ -15,7 +15,7 @@ input.sheet-tab4:checked ~ div.sheet-tab4 {
 
 .sheet-main {
     color: black;
-    font-family: Eurostile-LT-Std-Demi, Eurostile-LT-Std-Demi-backup, monospace;
+    font-family: "Contrail One";
     font-size: 10pt;
     min-width: 800px;
 }
@@ -115,30 +115,6 @@ span.sheet-skills, input.sheet-skills, select.sheet-skills {
 .sheet-skills-labels {
     bottom: 0;
     text-align: center;
-}
-
-@font-face {
-    font-family: Eurostile-LT-Std-Demi;
-    src: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/BattleTech-A-Time-of-War/fonts/Eurostile-LT-Std-Demi_16310.ttf") format("ttf");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: Eurostile-LT-Std-Demi-backup;
-    src: url("https://raw.githubusercontent.com/Skater901/roll20-character-sheets/BTATOW/BattleTech-A-Time-of-War/fonts/Eurostile-LT-Std-Demi_16310.ttf") format("ttf");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: Eurostile-LT-Std;
-    src: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/BattleTech-A-Time-of-War/fonts/Eurostile-LT-Std-Oblique_16312.ttf") format("ttf");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: Eurostile-LT-Std-backup;
-    src: url("https://raw.githubusercontent.com/Skater901/roll20-character-sheets/BTATOW/BattleTech-A-Time-of-War/fonts/Eurostile-LT-Std-Oblique_16312.ttf") format("ttf");
-    font-weight: bold;
 }
 
 input.sheet-tab {
