BTATOW Display linked attribute values on skills, set skills to update when attributes are updated, and hide arrows on skill XP number picker in Firefox.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
@@ -77,7 +77,7 @@ button[type=roll].sheet-skill-roll::before {
 }
 
 .sheet-skills-linked-attributes {
-    width: 66px;
+    width: 100px;
 }
 
 .sheet-skills-modifier {
@@ -106,6 +106,10 @@ input[type=number].sheet-skills::-webkit-inner-spin-button,
 input[type=number].sheet-skills::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
+}
+
+input[type=number].sheet-skills {
+    -moz-appearance: textfield;
 }
 
 span.sheet-skills, input.sheet-skills, select.sheet-skills {
