Gumshoe - UC-128 minor fixes (#5119)
* uc-128:gumshoe;corrected button,was missaligned for npcs

* uc-128:gumshoe:code formatting

* uc-128:gumshoe:investigative buttons removed, added field to trackindividual cover/network points

--- a/Gumshoe by Roll20/GUMSHOE.css
+++ b/Gumshoe by Roll20/GUMSHOE.css
@@ -469,16 +469,29 @@ div.sheet-abilities {
 	height: 2.6em;
 }
 
-.sheet-content .sheet-subsection input[type=text] {
+.sheet-content .sheet-subsection input[type=text],
+.sheet-content .sheet-subsection-num input[type=text]
+.sheet-content .sheet-subsection-num input[type=number], {
 	font-style: italic;
 	font-size: 10px;
-	width: 90%;
 	border-bottom: 1px solid #ddd;
 	position: relative;
 	top: 5px;
-	text-align: left;
 	margin: 0 15px 0 5px;
 	color: #666;
+}
+
+.sheet-content .sheet-subsection input[type=text] {
+	width: 90%;
+	text-align: left;
+}
+
+.sheet-content .sheet-subsection-num input[type=text]{
+	width: 70%;
+	text-align: left;
+}
+.sheet-content .sheet-subsection-num input[type=number]{
+	width: 20%;
 }
 
 .sheet-abilities-col div::first-line, 
@@ -486,7 +499,8 @@ div.sheet-abilities {
 	line-height: 2em;
 }
 
-.sheet-abilities-item button[type=roll] {
+.sheet-abilities-item button[type=roll],
+.sheet-abilities-item span.sheet-abilities-title {
 	display: inline-block;
 	width: 58%;
 	padding: 2px 0 0;
@@ -524,6 +538,7 @@ div.sheet-abilities {
 }
 
 .sheet-abilities-item button[type=roll] + span,
+.sheet-abilities-item span.sheet-inv-ability,
 .sheet-abilities-item div.sheet-rep-title + span {
 	position: relative;
 	font-size: 10px;
@@ -1387,6 +1402,10 @@ input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-co
 	width: 100%;
 }
 
+input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item.sheet-npc-ability button[type=roll] {
+	left:10px;
+}
+
 input.sheet-npc:checked ~ input.sheet-toc:checked ~ .sheet-master-container .sheet-section {
 	background: white;
 	min-height: 0;
@@ -1690,7 +1709,7 @@ input.sheet-nba:checked ~ .sheet-master-container .sheet-options input[type=text
 
 input.sheet-nba:checked ~ .sheet-master-container .sheet-display span {
 	font-size: 14px;
-	margin-left: 10px;
+	margin-left: 40px;
 	line-height: 25px;
 }
 /*----------- Abilities -----------*/
@@ -1796,6 +1815,7 @@ input.sheet-nba:checked ~ .sheet-master-container .sheet-abilities-item .sheet-r
 	padding-top: 0;
 	margin-top: -1px;
 }
+
 
 input.sheet-nba:checked ~ .sheet-master-container .sheet-abilities-item .sheet-rep-title .sheet-options-flag,
 input.sheet-nba:checked ~ .sheet-master-container .sheet-abilities-item .sheet-rep-title .sheet-options-flag + span {
