--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -469,15 +469,6 @@ input.sheet-campaign-settings-toggle:checked ~ div.sheet-campaign-settings {
     display: initial;
 }
 
-input.sheet-mythras-variant-toggle:not(:checked) ~ div .sheet-mythras-variant,
-input.sheet-mspace-variant-toggle:not(:checked) ~ div .sheet-mspace-variant {
-    display: none;
-}
-input.sheet-mythras-variant-toggle:checked ~ div .sheet-mythras-variant,
-input.sheet-mspace-variant-toggle:checked ~ div .sheet-mspace-variant {
-    display: initial;
-}
-
 input.sheet-spirit-toggle:not(:checked) ~ div .sheet-spirit-value {
     display: none;
 }
@@ -536,7 +527,6 @@ input.sheet-msvehicle-gas-bag-toggle:checked ~ div.sheet-gas-bag {
     display: inline-block;
 }
 
-
 input.sheet-msvehicle-terrestrial-toggle ~ div.sheet-terrestrial {
     display: none;
 }
@@ -568,6 +558,9 @@ input.sheet-extended-conflict-toggle:not(:checked) ~ div .sheet-extended-conflic
     display: none;
 }
 
+input.sheet-battle-units-enabled-toggle:not(:checked) ~ .sheet-battle-units-enabled {
+    display: none;
+}
 
 input.sheet-simplified-combat-toggle:not(:checked) ~ div .sheet-simplified-combat {
     display: none;
@@ -612,13 +605,17 @@ input.sheet-dependencies-enabled-toggle:checked ~ div .sheet-dependencies-enable
 input.sheet-rank-enabled-toggle:not(:checked) ~ div .sheet-rank-enabled {
     display: none;
 }
-input.sheet-rank-enabled-toggle:checked ~ div .sheet-info-species {
-    width: 15.75%;
-}
-input.sheet-rank-enabled-toggle:checked ~ div .sheet-info-name {
-    width: 15.75%;
-}
 input.sheet-rank-enabled-toggle:checked ~ div .sheet-info-career {
+    width: 17.75%;
+}
+
+input.sheet-spirits-enabled-toggle:not(:checked) ~ div .sheet-spirits-enabled {
+    display: none;
+}
+input.sheet-spirits-enabled-toggle:checked ~ div .sheet-info-species {
+    width: 15.75%;
+}
+input.sheet-spirits-enabled-toggle:checked ~ div .sheet-info-name {
     width: 15.75%;
 }
 
@@ -626,14 +623,19 @@ input.sheet-tenacity-enabled-toggle:not(:checked) ~ div .sheet-tenacity-enabled 
     display: none;
 }
 
-input.sheet-spirit-tenacity-toggle ~ div .sheet-spirit-tenacity {
+input.sheet-magic-points-enabled-toggle:not(:checked) ~ div .sheet-magic-points-enabled {
     display: none;
 }
-input.sheet-spirit-tenacity-toggle:checked ~ div .sheet-spirit-tenacity {
-    display: initial;
+
+input.sheet-power-points-enabled-toggle:not(:checked) ~ div .sheet-power-points-enabled {
+    display: none;
 }
 
-input.sheet-firearms-enabled-toggle:not(:checked) ~ div .sheet-firearms-enabled {
+input.sheet-prana-points-enabled-toggle:not(:checked) ~ div .sheet-prana-points-enabled {
+    display: none;
+}
+
+input.sheet-fire-rate-enabled-toggle:not(:checked) ~ div .sheet-fire-rate-enabled {
     display: none;
 }
 
@@ -946,15 +948,15 @@ div.sheet-info-row {
 }
 div.sheet-info-name {
     display: inline-block;
-    width: 18.5%;
+    width: 21.5%;
 }
 div.sheet-info-species {
     display: inline-block;
-    width: 18.5%;
+    width: 21.5%;
 }
 div.sheet-info-form {
     display: inline-block;
-    width: 13%;
+    width: 11%;
 }
 div.sheet-info-hit-locations {
     display: inline-block;
@@ -962,7 +964,7 @@ div.sheet-info-hit-locations {
 }
 div.sheet-info-career {
     display: inline-block;
-    width: 18.5%;
+    width: 26.5%;
 }
 div.sheet-info-traits {
     display: inline-block;
