uc-534 fixed padding for api span

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -1991,7 +1991,7 @@ span.sheet-spellconcentration
 {
     text-align: center;
     margin-top: -3px;
-    padding-bottom: 5px;
+    padding: 0.25em;
 }
 
 .sheet-rolltemplate-simple .sheet-label span span,
