Portuguese translation CSS fixes
Adding the font-size fix for the portuguese translation

--- a/Cypher Systems by Roll20/cypher_systems_by_roll20.css
+++ b/Cypher Systems by Roll20/cypher_systems_by_roll20.css
@@ -996,19 +996,23 @@ input[type="checkbox"].sheet-useasset:checked ~ .sheet-pc .sheet-useasset
 
 /* ===== LANGUAGES SPECIFICS ===== */
 .charsheet.lang-fr input[type="checkbox"].sheet-stl-strange:checked ~ .sheet-pc .sheet-stats .sheet-subblock .sheet-title
-, .charsheet.lang-es input[type="checkbox"].sheet-stl-strange:checked ~ .sheet-pc .sheet-stats .sheet-subblock .sheet-title {
+, .charsheet.lang-es input[type="checkbox"].sheet-stl-strange:checked ~ .sheet-pc .sheet-stats .sheet-subblock .sheet-title
+, .charsheet.lang-pt input[type="checkbox"].sheet-stl-strange:checked ~ .sheet-pc .sheet-stats .sheet-subblock .sheet-title {
     font-size: 105%;
 }
 .charsheet.lang-fr input[type="checkbox"].sheet-stl-cypher:checked ~ .sheet-pc .sheet-stats .sheet-subtitle
-, .charsheet.lang-es input[type="checkbox"].sheet-stl-cypher:checked ~ .sheet-pc .sheet-stats .sheet-subtitle {
+, .charsheet.lang-es input[type="checkbox"].sheet-stl-cypher:checked ~ .sheet-pc .sheet-stats .sheet-subtitle 
+, .charsheet.lang-pt input[type="checkbox"].sheet-stl-cypher:checked ~ .sheet-pc .sheet-stats .sheet-subtitle {
     font-size: calc(var(--subtitlefontsize) * 0.9);
 }
 .charsheet.lang-fr input[type="checkbox"].sheet-stl-strange:checked ~ .sheet-pc .sheet-stats .sheet-subtitle
-, .charsheet.lang-es input[type="checkbox"].sheet-stl-strange:checked ~ .sheet-pc .sheet-stats .sheet-subtitle {
+, .charsheet.lang-es input[type="checkbox"].sheet-stl-strange:checked ~ .sheet-pc .sheet-stats .sheet-subtitle
+, .charsheet.lang-pt input[type="checkbox"].sheet-stl-strange:checked ~ .sheet-pc .sheet-stats .sheet-subtitle{
     font-size: calc(var(--subtitlefontsize) * 0.7);
 }
 .charsheet.lang-fr input[type="checkbox"].sheet-stl-numenera:checked ~ .sheet-pc .sheet-stats .sheet-subtitle
-, .charsheet.lang-es input[type="checkbox"].sheet-stl-numenera:checked ~ .sheet-pc .sheet-stats .sheet-subtitle {
+, .charsheet.lang-es input[type="checkbox"].sheet-stl-numenera:checked ~ .sheet-pc .sheet-stats .sheet-subtitle
+, .charsheet.lang-pt input[type="checkbox"].sheet-stl-numenera:checked ~ .sheet-pc .sheet-stats .sheet-subtitle {
     font-size: calc(var(--subtitlefontsize) * 0.79);
 }
 .charsheet.lang-fr .sheet-identity .sheet-title span {
