--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -1265,6 +1265,7 @@ div.sheet-combatskill-button {
     width: 5%;
 }
 
+
 /* Combat Styles */
 div.sheet-combatstyle {
     margin-bottom: 5px;
@@ -1612,6 +1613,10 @@ select.sheet-skill-char {
 
 input.sheet-skill-char {
     width: 14%;
+}
+
+textarea.sheet-skill-note {
+    height: 3em;
 }
 
 /* Magic */
