--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -676,6 +676,10 @@ input.sheet-divine-magic-enabled-toggle:not(:checked) ~ div .sheet-divine-magic-
     display: none;
 }
 
+input.sheet-superpowers-enabled-toggle:not(:checked) ~ div .sheet-superpowers-enabled {
+    display: none;
+}
+
 input.sheet-fae-powers-enabled-toggle:not(:checked) ~ div .sheet-fae-powers-enabled {
     display: none;
 }
@@ -1648,6 +1652,10 @@ input[type="checkbox"].sheet-display-animism:not(:checked) ~ div.sheet-display-a
     display: none;
 }
 
+input[type="checkbox"].sheet-display-superpowers:not(:checked) ~ div.sheet-display-superpowers {
+    display: none;
+}
+
 input[type="checkbox"].sheet-display-fae-powers:not(:checked) ~ div.sheet-display-fae-powers {
     display: none;
 }
@@ -1742,6 +1750,30 @@ textarea.sheet-magic-note {
     height: 3em;
 }
 
+div.sheet-boost-name {
+    display: inline-block;
+    text-align: center;
+    width: 17.5%;
+}
+
+div.sheet-boost-button {
+    display: inline-block;
+    text-align: center;
+    width: 2.5%;
+}
+
+div.sheet-boost-cost {
+    display: inline-block;
+    text-align: center;
+    width: 5%;
+}
+
+div.sheet-boost-description {
+    display: inline-block;
+    text-align: center;
+    width: 73%;
+}
+
 div.sheet-spell-row {
     display: inline-block;
     width: 97.5%;
@@ -1764,6 +1796,7 @@ div.sheet-spell-description {
     text-align: center;
     width: 79%;
 }
+
 div.sheet-spell-button {
     display: inline-block;
     text-align: center;
@@ -2213,12 +2246,14 @@ div.sheet-mook-btn {
   width: 100%;
   border: 1px solid black;
   color: black;
-  font-weight: bold;
   background: #FFFFFF;
 }
 .sheet-rolltemplate-skill td {
   padding: 1px;
   border-bottom: 1px solid black;
+}
+.sheet-rolltemplate-skill td.sheet-template_label {
+  font-weight: bold;
 }
 .sheet-rolltemplate-skill td.sheet-template_value {
   text-align: center;
