--- a/Mythras/templates/main/main.html
+++ b/Mythras/templates/main/main.html
@@ -49,6 +49,7 @@
     <input type="checkbox" class="roman-magic-enabled-toggle hidden" name="attr_roman_magic_enabled" value="1">
     <input type="checkbox" class="arcane-magic-enabled-toggle hidden" name="attr_arcane_magic_enabled" value="1">
     <input type="checkbox" class="divine-magic-enabled-toggle hidden" name="attr_divine_magic_enabled" value="1">
+    <input type="checkbox" class="superpowers-enabled-toggle hidden" name="attr_superpowers_enabled" value="1">
     <input type="checkbox" class="fae-powers-enabled-toggle hidden" name="attr_fae_powers_enabled" value="1">
     <input type="checkbox" class="folk-magic-enabled-toggle hidden" name="attr_folk_magic_enabled" value="1" checked>
     <input type="number" class="hidden" name="attr_folk_magic_range_multiplier" value="1">
@@ -117,6 +118,7 @@
         <select name="attr_setting_option" data-i18n-list="setting-order">
             <option value="default" data-i18n-list-item="default" data-i18n="default-u" selected>Default</option>
             <option value="after_the_vampire_wars" data-i18n-list-item="atvw" data-i18n="after-the-vampire-wars-u">After the Vampire Wars</option>
+            <option value="agony_and_ecstasy" data-i18n-list-item="agony_and_ecstasy" data-i18n="agony-and-ecstasy-u">Agony & Ecstasy</option>
             <option value="classic_fantasy" data-i18n-list-item="classic_fantasy" data-i18n="classic-fantasy-u">Classic Fantasy</option>
             <option value="luther_arkwright" data-i18n-list-item="luther_arkwright" data-i18n="luther-arkwright-u">Luther Arkwright</option>
             <option value="m-space" data-i18n-list-item="mspace" data-i18n="m-space-u">M-Space</option>
@@ -328,6 +330,14 @@
         
         <span i18n-data="divine-magic-enabled-u">Divine Magic Enabled</span>:
         <select name="attr_divine_magic_enabled_option">
+            <option value="default" data-i18n="use-setting-default-u" selected>Use Setting Default</option>
+            <option value="0" data-i18n="no-u">No</option>
+            <option value="1" data-i18n="yes-u">Yes</option>
+        </select>
+        <br>
+
+        <span i18n-data="superpowers-enabled-u">Superpowers Enabled</span>:
+        <select name="attr_superpowers_enabled_option">
             <option value="default" data-i18n="use-setting-default-u" selected>Use Setting Default</option>
             <option value="0" data-i18n="no-u">No</option>
             <option value="1" data-i18n="yes-u">Yes</option>
@@ -1917,6 +1927,12 @@
                                     <div class="attribute-number"><input type="number" class="full-width total" name="attr_healing_rate" value="2" readonly></div>
                                 </div> <input type="checkbox" class="details-toggle" name="attr_healing_rate_details"><span class="details-toggle"></span>
                                 <div class="details">
+                                    <div><span data-i18n="calculate-with-u">Calculate with</span>:
+                                        <select name="attr_healing_rate_calc">
+                                            <option data-i18n="con-u" value="0">CON</option>
+                                            <option data-i18n="con-plus-half-pow-u" value="1">CON + half POW</option>
+                                        </select>
+                                    </div>
                                     <div><input type="checkbox" name="attr_healing_rate_double" value="1"><span data-i18n="double-base-healing-rate-u">Double Base Healing Rate</span></div>
                                     <div><span data-i18n="base-u">Base</span>: <input type="number" name="attr_healing_rate_base" value="2" readonly></div>
                                     <div><span data-i18n="other-u">Other</span>: <input type="number" name="attr_healing_rate_other" value="0"></div>
@@ -1960,6 +1976,12 @@
                                     <div class="attribute-number"><input type="number" class="full-width total" name="attr_luck_points_max" value="2" readonly></div> 
                                 </div> <input type="checkbox" class="details-toggle" name="attr_luck_points_details"><span class="details-toggle"></span>
                                 <div class="details">
+                                    <div><span data-i18n="calculate-with-u">Calculate with</span>:
+                                        <select name="attr_luck_points_calc">
+                                            <option data-i18n="pow-u" value="0">POW</option>
+                                            <option data-i18n="cha-plus-half-pow-u" value="1">CHA + half POW</option>
+                                        </select>
+                                    </div>
                                     <div><span data-i18n="base-u">Base</span>: <input type="number" name="attr_luck_points_base" value="2" readonly></div>
                                     <div><span cdata-i18n="other-u">Other</span>: <input type="number" name="attr_luck_points_other" value="0"></div>
                                 </div>
@@ -3525,7 +3547,7 @@
         <!-- Magic -->
         <div class="page page-magic page-stats">
             <h3 class="float-left"><span data-i18n="magic-u">Magic</span></h3>
-            <span class="theism-enabled float-right in-header-toggle" data-i18n="theism-u">Theism</span><input type="checkbox" class="theism-enabled display-theism float-right in-header-toggle" value="1" name="attr_display_theism" checked="true"/><span class="sorcery-enabled float-right in-header-toggle" data-i18n="sorcery-u">Sorcery</span><input type="checkbox" class="sorcery-enabled display-sorcery float-right in-header-toggle" value="1" name="attr_display_sorcery" checked="true"/><span class="mythras-psionics-enabled float-right in-header-toggle" data-i18n="psionics-u">Psionics</span><input type="checkbox" class="mythras-psionics-enabled display-mythras-psionics float-right in-header-toggle" value="1" name="attr_display_mythras_psionics" checked="true"/><span class="mysticism-enabled float-right in-header-toggle" data-i18n="mysticism-u">Mysticism</span><input type="checkbox" class="mysticism-enabled display-mysticism float-right in-header-toggle" value="1" name="attr_display_mysticism" checked="true"/><span class="animism-enabled float-right in-header-toggle" data-i18n="animism-u">Animism</span><input type="checkbox" class="animism-enabled display-animism float-right in-header-toggle" value="1" name="attr_display_animism" checked="true"/><span class="folk-magic-enabled float-right in-header-toggle" data-i18n="folk-magic-u">Folk Magic</span><input type="checkbox" class="folk-magic-enabled display-folk-magic float-right in-header-toggle" value="1" name="attr_display_folk_magic" checked="true"/><span class="fae-powers-enabled float-right in-header-toggle" data-i18n="fae-powers-u">Fae Powers</span><input type="checkbox" class="fae-powers-enabled display-fae-powers float-right in-header-toggle" value="1" name="attr_display_fae_powers" checked="true"/><span class="divine-magic-enabled float-right in-header-toggle" data-i18n="divine-magic-u">Divine Magic</span><input type="checkbox" class="divine-magic-enabled display-divine-magic float-right in-header-toggle" value="1" name="attr_display_divine_magic" checked="true"/><span class="arcane-magic-enabled float-right in-header-toggle" data-i18n="arcane-magic-u">Arcane Magic</span><input type="checkbox" class="arcane-magic-enabled display-arcane-magic float-right in-header-toggle" value="1" name="attr_display_arcane_magic" checked="true"/><span class="roman-magic-enabled float-right in-header-toggle" data-i18n="roman-magic-u">Roman Magic</span><input type="checkbox" class="roman-magic-enabled display-roman-magic float-right in-header-toggle" value="1" name="attr_display_roman_magic" checked="true"/><span class="ms-psionics-enabled float-right in-header-toggle" data-i18n="psionics-u">Psionics</span><input type="checkbox" class="ms-psionics-enabled display-ms-psionics float-right in-header-toggle" value="1" name="attr_display_ms_psionics" checked="true"/><span class="bold float-right in-header-toggle" data-i18n="display-u">Display:</span>
+            <span class="theism-enabled float-right in-header-toggle" data-i18n="theism-u">Theism</span><input type="checkbox" class="theism-enabled display-theism float-right in-header-toggle" value="1" name="attr_display_theism" checked="true"/><span class="sorcery-enabled float-right in-header-toggle" data-i18n="sorcery-u">Sorcery</span><input type="checkbox" class="sorcery-enabled display-sorcery float-right in-header-toggle" value="1" name="attr_display_sorcery" checked="true"/><span class="mythras-psionics-enabled float-right in-header-toggle" data-i18n="psionics-u">Psionics</span><input type="checkbox" class="mythras-psionics-enabled display-mythras-psionics float-right in-header-toggle" value="1" name="attr_display_mythras_psionics" checked="true"/><span class="mysticism-enabled float-right in-header-toggle" data-i18n="mysticism-u">Mysticism</span><input type="checkbox" class="mysticism-enabled display-mysticism float-right in-header-toggle" value="1" name="attr_display_mysticism" checked="true"/><span class="animism-enabled float-right in-header-toggle" data-i18n="animism-u">Animism</span><input type="checkbox" class="animism-enabled display-animism float-right in-header-toggle" value="1" name="attr_display_animism" checked="true"/><span class="folk-magic-enabled float-right in-header-toggle" data-i18n="folk-magic-u">Folk Magic</span><input type="checkbox" class="folk-magic-enabled display-folk-magic float-right in-header-toggle" value="1" name="attr_display_folk_magic" checked="true"/><span class="superpowers-enabled float-right in-header-toggle" data-i18n="superpowers-u">Superpowers</span><input type="checkbox" class="superpowers-enabled display-superpowers float-right in-header-toggle" value="1" name="attr_display_superpowers" checked="true"/><span class="fae-powers-enabled float-right in-header-toggle" data-i18n="fae-powers-u">Fae Powers</span><input type="checkbox" class="fae-powers-enabled display-fae-powers float-right in-header-toggle" value="1" name="attr_display_fae_powers" checked="true"/><span class="divine-magic-enabled float-right in-header-toggle" data-i18n="divine-magic-u">Divine Magic</span><input type="checkbox" class="divine-magic-enabled display-divine-magic float-right in-header-toggle" value="1" name="attr_display_divine_magic" checked="true"/><span class="arcane-magic-enabled float-right in-header-toggle" data-i18n="arcane-magic-u">Arcane Magic</span><input type="checkbox" class="arcane-magic-enabled display-arcane-magic float-right in-header-toggle" value="1" name="attr_display_arcane_magic" checked="true"/><span class="roman-magic-enabled float-right in-header-toggle" data-i18n="roman-magic-u">Roman Magic</span><input type="checkbox" class="roman-magic-enabled display-roman-magic float-right in-header-toggle" value="1" name="attr_display_roman_magic" checked="true"/><span class="ms-psionics-enabled float-right in-header-toggle" data-i18n="psionics-u">Psionics</span><input type="checkbox" class="ms-psionics-enabled display-ms-psionics float-right in-header-toggle" value="1" name="attr_display_ms_psionics" checked="true"/><span class="bold float-right in-header-toggle" data-i18n="display-u">Display:</span>
             <hr>
             
                 <!-- M-Space Psionics -->
@@ -4424,6 +4446,52 @@
                                 </div>
                             </fieldset>
                         </div>
+                    </div>
+                </div>
+
+                <!-- Superpowers -->
+                <div class="superpowers-enabled display-superpowers magic section">
+                    <input type="checkbox" class="section-toggle" name="attr_superpowers_section_toggle" value="1" checked>
+                    <h3 class="section-toggle" data-i18n="superpowers-u">Superpowers</h3>
+                    <div class="section-toggle">
+                        <div class="spell-row">
+                            <div class="spell-name header"><span data-i18n="power-u">Power</span></div>
+                            <div class="spell-button"></div>
+                            <div class="spell-description header"><span data-i18n="activation-u">Activation</span></div>
+                        </div>
+                        <fieldset class="repeating_superpower">
+                            <div>
+                                <div class="spell-row">
+                                    <div class="spell-name"><input type="text" class="full-width" name="attr_name"></div>
+                                    <div class="spell-button"><button type="roll" class="reduced-size d100 full-width" name="roll_superpower" value="@{roll_display}&{template:magic} {{name=@{name}}} @{name_display} {{^{activation-u}=@{activation}}} {{description=@{description}}}"></div>
+                                    <div class="spell-description header"><input type="text" class="full-width" name="attr_activation"></div>
+                                </div> <input type="checkbox" class="details-toggle" name="attr_details" checked><span class="details-toggle"></span>
+                                <div class="details">
+                                    <span data-i18n="description-u">Description</span>:
+                                    <textarea name="attr_description" class="spell-macro"></textarea>
+                                </div>
+                            </div>
+                        </fieldset>
+                        <hr style="visibility: hidden;">
+                        <div>
+                            <div class="boost-name header"><span data-i18n="boost-u">Boost</span></div>
+                            <div class="boost-button header"></div>
+                            <div class="boost-cost header"><span data-i18n="cost-u">Cost</span></div>
+                            <div class="boost-description header"><span data-i18n="description-u">Description</span></div>
+                        </div>
+                        <fieldset class="repeating_superpowerboost">
+                            <div class="boost-name"><input type="text" class="full-width" name="attr_name"></div>
+                            <div class="boost-button"><button type="roll" class="reduced-size d100 full-width" name="roll_superpowerboost" value="@{roll_display}&{template:magic} {{name=@{name}}} @{name_display} {{cost=@{cost}}} {{description=@{description}}}"></div>
+                            <div class="boost-cost"><input type="number" class="full-width text-align-center" name="attr_cost" step="1" value="1"></div>
+                            <div class="boost-description"><input type="text" class="full-width" name="attr_description"></div>
+                        </fieldset>
+                        <hr style="visibility: hidden;">
+                        <div class=header><span data-i18n="limitations-u">Limitations</span></div>
+                        <fieldset class="repeating_superpowerlimit">
+                            <div>
+                                <input type="text" class="full-width" name="attr_description">
+                            </div>
+                        </fieldset>
                     </div>
                 </div>
                 
@@ -7441,6 +7509,53 @@
                                         <input type="text" name="attr_resist">
                                         <textarea name="attr_macro" class="spell-macro">@{roll_display}&{template:magic} {{name=@{name}}} @{name_display} {{^{intensity-u}=?{Intensity|1}}} {{^{magnitude-u}=[[@{divine_magnitude}]]}} {{mp_cost=@{mp_cost}}} {{xp_cost=[[@{xp_cost}]]}} {{^{area-u}=@{area}}} {{^{time-u}=[[@{time}+@{apply_divine_armor_penalty}]] @{time_unit}}} {{^{duration-u}=@{duration}}} {{^{range-u}=@{range}}} {{^{resist-u}=@{resist}}} {{description=@{description}}}</textarea>
                                     </div>
+                                </fieldset>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Mook/Compact Superpowers -->
+            <div style="padding-left: 10px">
+                <input type="checkbox" class="hidden display-supoerpowers" value="1" name="attr_display_superpowers" checked="true"/>
+                <div class="superpowers-enabled display-superpowers">
+                    <div class="spacer"></div>
+                    <input type="checkbox" class="mook-section-toggle" name="attr_superpowers_section_toggle" value="1" checked>
+                    <h5 class="mook-section-toggle header-bar bold" data-i18n="superpowers-u">Superpowers</h5>
+                    <div class="mook-section-toggle" >
+                        <div>
+                            <div class="mook-skilllabel-col"><span class="italic underlined" data-i18n="powers-u">Powers</span>:</div>
+                            <div class="mook-skilllist-col">
+                                <fieldset class="repeating_superpower nocontrols inlined">
+                                    <button type="roll" class="reduced-size no-dice" name="roll_superpower" value="@{roll_display}&{template:magic} {{name=@{name}}} @{name_display} {{^{activation-u}=@{activation}}} {{description=@{description}}}"><span class="bold" name="attr_name"></span></button>&nbsp;
+                                    <div class="hidden">
+                                        <input type="text" class="full-width" name="attr_name">
+                                        <input type="text" class="full-width" name="attr_activation">
+                                        <textarea name="attr_description" class="spell-macro"></textarea>
+                                    </div>
+                                </fieldset>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="mook-skilllabel-col"><span class="italic underlined" data-i18n="boosts-u">Boosts</span>:</div>
+                            <div class="mook-skilllist-col">
+                                <fieldset class="repeating_superpowerboost nocontrols inlined">
+                                    <button type="roll" class="reduced-size no-dice" name="roll_superpowerboost" value="@{roll_display}&{template:magic} {{name=@{name}}} @{name_display} {{cost=@{cost}}} {{description=@{description}}}"><span class="bold" name="attr_name"></span></button>&nbsp;
+                                    <div class="hidden">
+                                        <input type="text" class="full-width" name="attr_name">
+                                        <input type="number" class="full-width text-align-center" name="attr_cost" step="1" value="1">
+                                        <input type="text" class="full-width" name="attr_description">
+                                    </div>
+                                </fieldset>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="mook-skilllabel-col"><span class="italic underlined" data-i18n="limitations-u">Limitations</span>:</div>
+                            <div class="mook-skilllist-col">
+                                <fieldset class="repeating_superpowerlimit nocontrols">
+                                    <span class="bold">&bull; </span><span name="attr_description"></span>
+                                    <div class="hidden"><input type="text" name="attr_description"></div>
                                 </fieldset>
                             </div>
                         </div>
