--- a/Mythras/templates/roll_templates/base.html
+++ b/Mythras/templates/roll_templates/base.html
@@ -360,7 +360,7 @@
     </table>
 </rolltemplate>
 
-<!-- &{template:magic} {{name=@{name}}} @{name_display} {{damage=[[1d8]]}} {{description=@{description}}} -->
+<!-- Magic Template -->
 <rolltemplate class="sheet-rolltemplate-magic">
     <div class="header">{{name}}</div>
     {{#character}}
