collapsable and setting toggles

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -7,6 +7,20 @@ h1 {
   z-index: 0;
 }
 
+textarea {
+  color        : #000000;
+  font-family  : 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height       : 3em;
+  line-height  : 1em;
+  margin       : 0;
+  min-height   : 3em;
+  overflow     : hidden;
+  overflow-wrap: break-word;
+  padding      : 2%;
+  resize       : vertical;
+  white-space  : pre-line;
+}
+
 .charsheet {
   margin-left: -2%;
 }
@@ -268,13 +282,14 @@ input.sheet-tab[value="ark"] ~ div.sheet-ark {
 }
 
 button {
-    border-bottom             : 2px solid #666;
-    border-bottom-right-radius: 2px;
-    border-color              : #aaa;
-    border-radius             : 5px;
-    border-right              : 3px solid #999;
-    border-style              : outset;
+    background    : buttonface;
+    border        : solid 1px #000;
+    border-right  : 3px solid #999;
+    border-style  : outset;
+    box-shadow    : 2px 2px 2px #000;
+    margin        : 1%;
     text-transform: capitalize;
+    vertical-align: middle;
   }
 
 button:hover {
@@ -336,19 +351,6 @@ input[type="checkbox"].sheet-input {
   height: 1.1em;
 }
 
-.sheet-input-textarea {
-  color      : #000000;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  height     : 3em;
-  line-height: 1em;
-  margin     : 0;
-  min-height : 3em;
-  overflow   : hidden;
-  padding    : 0 2px 0 2px;
-  resize     : vertical;
-  width      : 100%;
-}
-
 input[disabled].sheet-input-number, input[readonly].sheet-input, textarea[disabled].sheet-input, textarea[readonly].sheet-input, input[readonly].sheet-input-number {
   background-color: #eeeeee;
   border-color: #6e6e6e;
@@ -405,8 +407,6 @@ button.sheet-toggles {
 .sheet-mount-grid input.sheet-expand:checked + span::before,
 .repitem .sheet-mount_gear-grid:hover input.sheet-expand + span::before,
 .repitem .sheet-mount_gear-grid input.sheet-expand:checked + span::before,
-.repitem .sheet-spells-grid:hover input.sheet-expand + span::before,
-.repitem .sheet-spells-grid input.sheet-expand:checked + span::before,
 button.sheet-toggles:hover {
   opacity: 100;
 }
@@ -892,6 +892,10 @@ div.sheet-dice_pool-grid {
   grid-column-gap: 2px;
 }
 
+div.sheet-talents-grid span {
+  text-align: center;
+}
+
 .sheet-talents-box,
 .sheet-mutant-box {
   grid-row-start: 1;
@@ -918,11 +922,8 @@ div.sheet-dice_pool-grid {
   grid-column: 1/4;
 }
 
+
 /* ---------------------------------- Skills */
-div.sheet-skills-grid {
-
-}
-
 .sheet-skills-grid > span {
   display: grid;
   grid-template-columns: 5fr 2fr 1fr 0.5fr 1fr;
@@ -2111,26 +2112,36 @@ input.sheet-negative:checked + span::before {
 
 /* Mutant Year Zero */
 button.sheet-toggles {
+  background    : none;
+  border        : none;
+  font-weight   : normal;
+  padding       : 0px;
   text-transform: lowercase;
-  font-weight: normal;
-  background: none;
-  border: none;
-  padding: 0px;
 }
 
 div.sheet-settings {
-  border-top: 1px dotted orange;
-  height    : 12em;
   overflow  : hidden;
 }
 
-input.sheet-display[value="settings"] ~ div.sheet-settings {
+div.sheet-settings input {
+  text-align: center;
+}
+
+div.sheet-settings textarea {
+  height    : 8em;
+  min-height: 8em;
+  resize    : none;
+  width     : 95%;
+}
+
+input.sheet-display[value*="display"] ~ div.sheet-settings {
     height    : 0px;
     transition: height 2s;
     -webkit-transition: height 2s; /* Safari */
 }
 
-input.sheet-display[value="display"] ~ div.sheet-settings {
+input.sheet-display[value*="settings"] ~ div.sheet-settings {
+    border-top: 1px dotted orange;
     height    : 12em;
     transition: height 2s;
     -webkit-transition: height 2s; /* Safari */
@@ -2163,6 +2174,33 @@ div.sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span {
    background-color: transparent;
 }
 
+  /***** COLLAPSABLE DIVS *****/
+  span.sheet-collapsible {
+    grid-column : 1 / 4;
+    height      : 0em;
+    padding-left: 5%;
+    text-align  : left;
+    visibility  : hidden;
+    white-space : pre-line;
+    word-break  : break-word;
+  }
+
+  input.sheet-display[value*="collapse"] ~ div.sheet-talents-grid span.sheet-collapsible {
+     height: auto;
+     text-align: left;
+     visibility  : visible;
+  }
+
+  button.sheet-collapse[type="action"] {
+    background : none;
+    border     : none;
+    font-weight: bold;
+    text-align : left;
+  }
+
+  button.sheet-collapse[type="action"]:hover {
+    color: #c77624;
+  }
 
 div.sheet-attributes-box1 {
   background-size: cover;
@@ -2237,4 +2275,3 @@ div.sheet-notes-box1 {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header18.jpg");
 }
-
