D&D3.5 Roll Template Fix
Re-add closing comment tags to fix the CSS files so the Roll Templates work again.
(was broken with the encoding/line ending fix.)

--- a/D&D_3-5/charsheet_3-5.css
+++ b/D&D_3-5/charsheet_3-5.css
@@ -757,7 +757,7 @@ input, select {
 	text-align: left;
 }
  .sheet-rolltemplate-DnD35StdRoll th {
-    /*color: rgb(45, 126, 107);         /* teal color */
+    /*color: rgb(45, 126, 107); */        /* teal color */
 	padding-left: 5px;
 	line-height: 1.6em;          /* a little extra vertical spacing of the lines in the header to help the name/title stand out. */
 	font-size: 1.2em;            /* the name is slightly larger than the rest */
@@ -912,7 +912,7 @@ font-style: italic;
  .sheet-rolltemplate-DnD35Initiative th {
 	color: rgb(204, 153, 51);         /* golden color */
 	padding-left: 5px;
-	/*line-height: 1.6em;          /* a little extra vertical spacing of the lines in the header to help the name/title stand out. */
+	/*line-height: 1.6em; */      /* a little extra vertical spacing of the lines in the header to help the name/title stand out. */
 	font-size: 1.2em;            /* the name is slightly larger than the rest */
 	text-align: left;
 	font-family: "Arial", Helvetica, sans-serif;
